prep to convert item to model

--- a/src/WPFDesktopUI/Views/ItemView.xaml
+++ b/src/WPFDesktopUI/Views/ItemView.xaml
@@ -15,9 +15,14 @@
 
 
             <Grid DockPanel.Dock="Top">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+
                 <!-- SEARCH BAR -->
                 <TextBox x:Name="UniqueReplaceWithFilter"
-                         Grid.Row="0"
+                         Grid.Column="0"
                          Margin="0, 20"/>
                 <!-- WATERMARK -->
                 <TextBlock IsHitTestVisible="False" Text="Search Items" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="10,0,0,0" Foreground="DarkGray">
@@ -32,6 +37,13 @@
                         </Style>
                     </TextBlock.Style>
                 </TextBlock>
+
+                <Button x:Name="BtnAdd"
+                        Margin="10,20"
+                        Grid.Column="1" 
+                        Style="{StaticResource ButtonClose}">
+                    Add
+                </Button>
             </Grid>
 
 
