--- a/src/WPFDesktopUI/Views/AboutView.xaml
+++ b/src/WPFDesktopUI/Views/AboutView.xaml
@@ -15,7 +15,7 @@
         <Grid DockPanel.Dock="Top">
             <StackPanel>
                 <TextBlock>Invoice Importer by Sangwa</TextBlock>
-                <TextBlock>Version: 0.6.2</TextBlock>
+                <TextBlock>Version: 0.6.5</TextBlock>
                 <TextBlock>Copyright © 2020 Sangwa Solutions Incorporated</TextBlock>
                 <TextBlock>All rights reserved</TextBlock>
             </StackPanel>
@@ -42,7 +42,7 @@
                     Grid.Row="1"
                     Grid.Column="1"
                     Style="{StaticResource ButtonClose}">
-                Okay
+                Close
             </Button>
         </Grid>
         </DockPanel>
